<resources>
    <string name="app_name">TP2</string>
    <string name="weightLabel">Déterminer votre poids</string>
    <string name="weightInputPlaceholder">Poids</string>
    <string name="heightLabel">Déterminer votre taille</string>
    <string name="heightInputPlaceholder">Taille</string>
    <string name="metersLabel">Mètre</string>
    <string name="centimetersLabel">Centimètre</string>
    <string name="calculateButtonValue">Calculer l\'IMC</string>
    <string name="checkbox">Appréciation</string>
    <string name="resetButtonValue">Reset</string>
    <string name="resultLabel">Résultat:</string>
    <string name="initText">Vous devez cliquer sur le bouton "Calculer l'IMC" pour obtenir un résultat.</string>
</resources>
