<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weightLabel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Poids"
            android:hint="@string/weightInputPlaceholder"
            android:inputType="number" />

        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heightLabel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Taille"
            android:hint="@string/heightInputPlaceholder"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/meterRadioInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metersLabel" />

            <RadioButton
                android:id="@+id/centimeterRadioInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centimetersLabel" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/commentaryCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculateButtonValue" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetButtonValue" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultLabel" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>